<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ouroboros</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_recherche">Recherche rapide</string>
    <string name="search_hint">Recherche</string>
    
    <string name="title_activity_recherche">RechercheActivity</string>
    <string name="title_activity_lister_patients_fragment">ListerPatientsFragment</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="title_activity_hospitalisations_fragment">HospitalisationsFragment</string>
    <string name="title_activity_hospi_en_cours">Hospitalisation En Cours</string>
    <string name="title_activity_archives">Archives</string>
    <string name="title_activity_codification">Codification</string>
    <string name="title_activity_vue_donnees_socio">Données socio-démographiques</string>
    <string name="title_activity_recherche_patients">Recherche Patients</string>
    
    <string name="deconnexion">> Déconnexion</string>
    <string name="trouverPatient">Trouver Patient</string>
    <string name="hospiService">Hospitalisations du service</string>
    <string name="gestionDossiers">Gérer vos dossierss</string>
    <string name="creerDos">Création dossier</string>
    <string name="ajoutDoc">Ajout document</string>
    <string name="transfert">Transfert</string>
    <string name="aCodifier">A codifier</string>
    <string name="autresActions">Autres actions</string>
    <string name="archives">Archives</string>
    <string name="monCompte">Mon compte</string>
    <string name="recherche">Recherche</string>
    <string name="ModifCompte">Modifier compte</string>
    <string name="CreaCompte">Créer compte</string>
    <string name="CreaDos">Créer dossier</string>
    <string name="SuppressionCompte">Supprimer compte</string>
    <string name="GererInfra">Infrastructure</string>
    <string name="LastAction">Dernières actions</string>
    <string name="Modif">Modifier</string>
    <string name="VisDMP">Visualisez le DMP</string>
    <string name="Imprimer">Imprimer le DMP</string>
    <string name="Affiliation">Affilier à un service</string>
    <string name="Ajouter">Ajouter</string>
    <string name="Annuler">Annuler</string>
    <string name="ModifMdp">Modifier mdp</string>
    <string name="Valider">Valider</string>
    <string name="Retour">Retour</string>
    <string name="Archiver">Archiver</string>
    <string name="pseudo">Pseudo</string>
    <string name="pswd">Mot de passe</string>
    <string name="grand_logo">Logo complet de l\'application</string>
    <string name="encadre">Encadré pour les identifiants de connexion</string>
    <string name="bouton_connexion">Validation de connexion</string>
    <string name="infos_generales">Informations générales</string>
    <string name="hospi_en_cours">Hospitalisation en cours</string>
    <string name="codification">Codification</string>
    <string name="vue_patient">Voir le dossier du patient</string>
    <string name="ajout_consult">Ajouter une consultation</string>
    <string name="ajout_doc">Ajouter un document</string>
    <string name="modif_data">Modification des données socio-démographiques du patient</string>
    <string name="ajout_hospi">Ajouter une hospitalisation</string>
    <string name="diag_principal">Diagnostic principal</string>
    
    <string name="hostAnd">Host and</string>
    <string name="saveLives">save lives.</string>
    
    <string name="form_nom_patient">Nom :</string>
	<string name="form_prenom_patient">Prenom :</string>
	<string name="form_titre">Recherche du patient</string>
	<string name="form_lieu_naissance">Né(e) à :</string>
	<string name="form_date_naissance"> le </string>
	<string name="form_ville">Ville :</string>


</resources>