<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PageConnexionActivity" 
    android:background="@drawable/fond">

    <ImageView
        android:id="@+id/grand_logo"
        android:contentDescription="@string/grand_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="173dp"
        android:src="@drawable/grand_logo" />

    <ImageView
        android:id="@+id/encadre"
        android:contentDescription="@string/encadre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:src="@drawable/encadre" />

    <EditText
        android:id="@+id/pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/grand_logo"
        android:layout_alignTop="@+id/encadre"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:height="100dp"
        android:inputType="textPersonName"
        android:text="@string/pseudo"
        android:width="250dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pseudo"
        android:layout_below="@+id/pseudo"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:height="100dp"
        android:inputType="textPersonName"
        android:text="@string/pswd"
        android:width="250dp" />

    <ImageButton
        android:id="@+id/bouton_connexion"
        android:contentDescription="@string/bouton_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pswd"
        android:layout_alignRight="@+id/grand_logo"
        android:src="@drawable/bouton_connexion" />

</RelativeLayout>